--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
 .DS_Store
+dist/electron/*
+dist/web/*
+dist/
+build/*
+!build/icons
 node_modules/
-/dist/
-/build/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+npm-debug.log
+npm-debug.log.*
+thumbs.db
+!.gitkeep
