--- a/package.json
+++ b/package.json
@@ -51,13 +51,15 @@
     }
   },
   "dependencies": {
+    "async": "^2.6.1",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "jquery": "^3.3.1",
+    "libxmljs": "^0.19.5",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "xml-js": "^1.6.8"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "ajv": "^6.5.0",
