Getting a few things set up for transitions, working on error handling on the export list which should resolve itself once we do some validation on the filePaths page.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:dir": "node .electron-vue/build.js && electron-builder --dir",
     "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
     "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
-    "dev": "node .electron-vue/dev-runner.js",
+    "dev": "export DISPLAY=:0 && node .electron-vue/dev-runner.js",
     "pack": "npm run pack:main && npm run pack:renderer",
     "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
     "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
@@ -54,8 +54,10 @@
     "async": "^2.6.1",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "fs-extra": "^7.0.1",
+    "gsap": "^2.0.2",
     "jquery": "^3.3.1",
-    "libxmljs": "^0.19.5",
+    "libxmljs": "^0.19.3",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
