--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
+    "vue2-animate": "^2.1.0",
     "vuex": "^3.0.1",
     "xml2js": "^0.4.19"
   },
