--- a/package.json
+++ b/package.json
@@ -51,13 +51,19 @@
     }
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/vue-fontawesome": "^0.1.2",
     "async": "^2.6.1",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "fs-extra": "^7.0.1",
     "gsap": "^2.0.2",
+    "i": "^0.3.6",
     "jquery": "^3.3.1",
     "libxmljs": "^0.19.3",
+    "npm": "^6.4.1",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
