Added new sorta crap logo

--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^15.2.4",
     "vue-style-loader": "^4.1.0",
+    "vue-svg-loader": "^0.11.0",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
