--- a/package.json
+++ b/package.json
@@ -53,14 +53,15 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.5.0",
     "async": "^2.6.1",
-    "axios": "^0.18.0",
-    "bootstrap-vue": "^2.0.0-rc.11",
+    "axios": "^0.19.0",
+    "bootstrap-vue": "^2.0.0-rc.24",
+    "find": "^0.3.0",
     "fs-extra": "^7.0.1",
     "gsap": "^2.0.2",
     "i": "^0.3.6",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "libxmljs": "^0.19.3",
-    "npm": "^6.4.1",
+    "npm": "^6.9.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
@@ -85,7 +86,7 @@
     "del": "^3.0.0",
     "devtron": "^1.4.0",
     "electron": "^2.0.4",
-    "electron-builder": "^20.19.2",
+    "electron-builder": "^20.44.4",
     "electron-debug": "^1.5.0",
     "electron-devtools-installer": "^2.2.4",
     "file-loader": "^1.1.11",
@@ -105,7 +106,7 @@
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4",
+    "webpack-dev-server": "^3.7.2",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "^4.1.3"
   }
