Need to fix the regex for images.

--- a/package.json
+++ b/package.json
@@ -55,13 +55,17 @@
     "async": "^2.6.1",
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.0-rc.24",
+    "escape-string-regexp": "^2.0.0",
     "find": "^0.3.0",
+    "find-file-sync": "0.0.4",
     "fs-extra": "^7.0.1",
     "gsap": "^2.0.2",
     "i": "^0.3.6",
     "jquery": "^3.4.1",
     "libxmljs": "^0.19.3",
+    "lodash.escaperegexp": "^4.1.2",
     "npm": "^6.9.0",
+    "sync": "^0.2.5",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
