--- a/package.json
+++ b/package.json
@@ -55,23 +55,22 @@
     "async": "^2.6.1",
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.0-rc.24",
-    "escape-string-regexp": "^2.0.0",
     "find": "^0.3.0",
     "find-file-sync": "0.0.4",
     "fs-extra": "^7.0.1",
     "gsap": "^2.0.2",
+    "handbrake-js": "^4.0.0",
     "i": "^0.3.6",
     "jquery": "^3.4.1",
     "libxmljs": "^0.19.3",
-    "lodash.escaperegexp": "^4.1.2",
     "npm": "^6.9.0",
+    "sharp": "^0.22.1",
     "sync": "^0.2.5",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vue2-animate": "^2.1.0",
-    "vuex": "^3.0.1",
-    "xml2js": "^0.4.19"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "ajv": "^6.5.0",
